<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brainwaves</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="title_activity_brainwaves">Brainwaves</string>
    <string name="title_activity_simple_xyplot">SimpleXYPlotActivity</string>
    <string name="title_activity_dynamic_xyplot">DynamicXYPlotActivity</string>
    <string name="dynamic_plot">Dynamic plot</string>
    <string name="title_activity_orientation_sensor_example">OrientationSensorExampleActivity</string>
    <string name="title_activity_muse">MuseActivity</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val">0.0</string>
    <string name="eeg">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pause/Resume</string>
    <string name="pss">PSS</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Signal Quality (1 or 2 is good):</string>
    <string name="title_activity_splash_screen">Brainwaves</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="first">firsttab</string>
    <string name="last">lasttab</string>
    <string name="leftarrow"><![CDATA[<<]]></string>
    <string name="rightarrow"><![CDATA[>>]]></string>
    <string name="lockandview"><![CDATA[Lock tab & view data]]></string>

</resources>
