<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/background_card">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Session Name: " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sessionName"
                android:enabled="false"
                android:text="[default_name]" />
        </LinearLayout>

        <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/refresh"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/refresh" />
            <Button
                android:id="@+id/connect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/connect" />
            <Button
                android:id="@+id/disconnect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/disconnect" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/con_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/undefined" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/eeg" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/eeg_tp9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/eeg_fp1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/eeg_fp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/eeg_tp10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/accel" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/acc_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/acc_y"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/acc_z"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/muse_elem" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/elem1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/elem2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/elem3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
            <TextView
                android:id="@+id/elem4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/version" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/undefined" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/pause"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/pause" />
        </LinearLayout>

    </LinearLayout>
    </FrameLayout>

</LinearLayout>

