<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kyleduo.switchbuttondemo.StyleActivity"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/background_card">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/density"
                    />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:id="@+id/lock"
                    android:layout_alignParentBottom="true"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lockandview"
                        android:textSize="15dp"
                        android:layout_gravity="center_vertical|left"
                        android:layout_marginLeft="10dp"
                        />
                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/locksb"
                        style="@style/SwitchButtonStyle"
                        app:onColor="@color/happy_blue"
                        android:layout_gravity="center_vertical|right"
                        />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/density"
                    android:layout_above="@+id/lock"
                    >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leftarrow"
                        android:id="@+id/less"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"
                        android:paddingLeft="25dp"
                        android:paddingRight="100dp"
                        android:background="@color/transparent"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Monthly ago"
                        android:textSize="18dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/transparent"
                        android:id="@+id/unit"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rightarrow"
                        android:textStyle="bold"
                        android:id="@+id/more"
                        android:textSize="18dp"
                        android:layout_gravity="right"
                        android:paddingRight="25dp"
                        android:paddingLeft="100dp"
                        android:background="@color/transparent"
                        />
                </FrameLayout>


            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>